# TUR-DPO-Topology--and-Uncertainty-Aware-Direct-Preference-Optimization

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  evaluate.py  pyproject.toml  train.py
configs/: default.json
examples/: demo.py  sample_preferences.json
tests/: __init__.py  test_loss.py  test_rewards.py  test_topology.py  test_uncertainty.py
turdpo/: __init__.py  calibration.py  data.py  loss.py  rewards.py  topology.py  trainer.py  uncertainty.py  utils.py  verifier.py
